move calamity site, replace root

--- a/index.html
+++ b/index.html
@@ -6,36 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="style.css" rel="stylesheet" />
-    <title>CALAMITY GAMES</title>
+    <title>Hello! | I'm Julia :D</title>
 
   </head>
 
   <body>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
+    <div>HELLO! I'M JULIA :D</div>
   </body>
 
 </html>
